examples/compiler_errors/test/dfx_generated/compiler_errors/compiler_errors.did.js
export const idlFactory = ({ IDL }) => {
    return IDL.Service({ standin: IDL.Func([], [], ['query']) });
};
export const init = ({ IDL }) => {
    return [];
};
